fix: Setting base routes for ap to /aps/ instead of /ap/
